products added and general testing amends

--- a/app/views/create-cases-add-products/add-a-product-to-a-case.html
+++ b/app/views/create-cases-add-products/add-a-product-to-a-case.html
@@ -19,7 +19,7 @@
     <div class="govuk-grid-column-two-thirds">
 
         <span class="govuk-caption-l">Allegation 20-2120</span>
-        <h1 class="govuk-heading-l">Add a product to the case</h1>
+        <h1 class="govuk-heading-l">Add a product to this case</h1>
 
         <p class="govuk-body">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum quam distinctio vero harum animi consequuntur labore voluptatibus voluptates, provident voluptate eius aliquam id exercitationem! Quod fugiat laudantium blanditiis qui magnam.
