--- a/app/views/create-cases-add-products/products-page.html
+++ b/app/views/create-cases-add-products/products-page.html
@@ -25,7 +25,7 @@
             </summary>
             <div class="govuk-details__text">
                 <p class="govuk-body-s">
-                    <span id="search-hint">You can search for products using keywords from the name and model or by using a barcode. A barcode is normally 13 digits, although older products may have a 12 digit number.</span>
+                    <span id="search-hint">You can search for products using keywords from the product name or by using a barcode. A barcode is normally 13 digits, although older products may have a 12 digit number.</span>
                 </p>
                 <p class="govuk-body-s">
                     You can also create a case for a product or add a product if it doesn't already exist<!-- within our records-->.
