--- a/app/views/product-case-testing/cases-page.html
+++ b/app/views/product-case-testing/cases-page.html
@@ -69,8 +69,8 @@
 
 <div class="govuk-grid-row">
 
-    <section class="govuk-grid-column-one-quarter">
-        <form action="#" method="post" novalidate>
+    <section class="govuk-grid-column-one-quarter">&nbsp;
+        <!--form action="#" method="post" novalidate>
             <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset">
 
@@ -98,7 +98,7 @@
                 </button>
             </div>
 
-        </form>
+        </form-->
     </section>
 
     <section class="govuk-grid-column-three-quarters">
@@ -120,10 +120,10 @@
                     <tbody class="govuk-table__body">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-01" colspan="3" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Hair bleach TM, Hair bleach – chemical hazard</a>
+                                <a href="blank-01.html" class="govuk-link govuk-link--no-visited-state">Zooplin hair bleach, Hair bleach – chemical hazard</a>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
@@ -157,7 +157,7 @@
                                 Actions
                             </th>
                             <td headers="item-01 actions-01" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 2021-1001</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 2021-1001</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -165,10 +165,10 @@
                     <tbody class="govuk-table__body">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-02" colspan="3" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">And another product title here</a>
+                                <a href="blank-01.html" class="govuk-link govuk-link--no-visited-state">Rizor chainsaw 3300x - shock hazard</a>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
@@ -200,7 +200,7 @@
                                 Actions
                             </th>
                             <td headers="item-02 actions-02" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 20-2120</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 20-2120</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -208,10 +208,10 @@
                     <tbody class="govuk-table__body">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-03" colspan="3" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Electrical appliances and equipment – electric shock hazard (no product specified)</a>
+                                <a href="blank-01.html" class="govuk-link govuk-link--no-visited-state">Dyson Animal 2 – electric shock hazard</a>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
@@ -241,7 +241,7 @@
                                 Actions
                             </th>
                             <td headers="item-03 actions-03" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 2104-21000</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 2104-21000</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -249,10 +249,10 @@
                     <tbody class="govuk-table__body">
                          <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-04" colspan="3" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Hair bleach TM, Washing machine – burns hazard</a>
+                                <a href="blank-01.html" class="govuk-link govuk-link--no-visited-state">Hoover Hotwash 100, Washing machine – burns hazard</a>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
@@ -282,7 +282,7 @@
                                 Actions
                             </th>
                             <td headers="item-04 actions-04" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 2007-37001</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 2007-37001</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -290,10 +290,10 @@
                     <tbody class="govuk-table__body">
                          <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-05" colspan="3" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Large Phone Charger Battery, Portable battery – electric shock hazard</a>
+                                <a href="blank-01.html" class="govuk-link govuk-link--no-visited-state">Yippy Phone Charger Battery, Portable battery – electric shock hazard</a>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
@@ -323,7 +323,7 @@
                                 Actions
                             </th>
                             <td headers="item-05 actions-05" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 1007-27002</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 1007-27002</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -331,10 +331,10 @@
                     <tbody class="govuk-table__body">
                          <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-06" colspan="3" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Washer 3000, Washing machine – electric shock hazard</a>
+                                <a href="blank-01.html" class="govuk-link govuk-link--no-visited-state">Neath, Washing machine – electric shock hazard</a>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
@@ -366,7 +366,7 @@
                                 Actions
                             </th>
                             <td headers="item-06 actions-06" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 45001-70000</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 45001-70000</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -374,10 +374,10 @@
                     <tbody class="govuk-table__body">
                          <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-07" colspan="3" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Asda bleach, Bleach – chemical hazard</a>
+                                <a href="blank-01.html" class="govuk-link govuk-link--no-visited-state">Asda bleach 100ml, Bleach – non-childsafe cap</a>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
@@ -407,7 +407,7 @@
                                 Actions
                             </th>
                             <td headers="item-07 actions-07" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 25022-21010</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 25022-21010</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -415,51 +415,10 @@
                     <tbody class="govuk-table__body">
                          <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
-                            </th>
-                            <th id="item-08" colspan="3" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">BOSA face masks - fabric fail</a>
-                            </th>
-                        </tr>
-                        <tr class="govuk-table__row">
-                            <th headers="item-08" id="meta-08" class="govuk-visually-hidden">
-                                Metadata
-                            </th>
-                            <td headers="allegation item-08 meta-08" class="govuk-table__cell">
-                                2221-70003
-                            </td>
-                            <td headers="caseowner item-08 meta-08" class="govuk-table__cell">
-                                Flintshire Council
-                            </td>
-                            <td headers="updated item-08 meta-08" class="govuk-table__cell">
-                                about 7 months ago
-                            </td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                            <th headers="item-08" id="status-08" class="govuk-visually-hidden">
-                                Status
-                            </th>
-                            <td headers="item-08 status-08" colspan="3" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
-                            </td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                            <th headers="item-08" id="actions-08" class="govuk-visually-hidden">
-                                Actions
-                            </th>
-                            <td headers="item-08 actions-08" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 2221-70003</span></a>
-                            </td>
-                        </tr>
-                    </tbody>
-
-                    <tbody class="govuk-table__body">
-                         <tr class="govuk-table__row">
-                            <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-09" colspan="3" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Trepid surgical gloves (pair) - wrong gauge</a>
+                                <a href="blank-01.html" class="govuk-link govuk-link--no-visited-state">Medical gloves - wrong gauge:</a> <span style="font-weight: normal;">no product added</span>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
@@ -493,7 +452,48 @@
                                 Actions
                             </th>
                             <td headers="item-09 actions-09" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 21-23341</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 21-23341</span></a>
+                            </td>
+                        </tr>
+                    </tbody>
+
+                    <tbody class="govuk-table__body">
+                         <tr class="govuk-table__row">
+                            <th class="govuk-visually-hidden">
+                                Case title
+                            </th>
+                            <th id="item-08" colspan="3" scope="colgroup" class="govuk-table__header">
+                                <a href="blank-01.html" class="govuk-link govuk-link--no-visited-state">BOSA face masks - strap fail</a>
+                            </th>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <th headers="item-08" id="meta-08" class="govuk-visually-hidden">
+                                Metadata
+                            </th>
+                            <td headers="allegation item-08 meta-08" class="govuk-table__cell">
+                                2221-70003
+                            </td>
+                            <td headers="caseowner item-08 meta-08" class="govuk-table__cell">
+                                Flintshire Council
+                            </td>
+                            <td headers="updated item-08 meta-08" class="govuk-table__cell">
+                                about 7 months ago
+                            </td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <th headers="item-08" id="status-08" class="govuk-visually-hidden">
+                                Status
+                            </th>
+                            <td headers="item-08 status-08" colspan="3" class="govuk-table__cell">
+                                <span class="opss-tag opss-tag--std">Allegation</span>
+                            </td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <th headers="item-08" id="actions-08" class="govuk-visually-hidden">
+                                Actions
+                            </th>
+                            <td headers="item-08 actions-08" colspan="3" class="govuk-table__cell">
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 2221-70003</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -509,7 +509,7 @@
 
                 </table>
 
-                <nav class="opss-pagination-link opss-pagination-link--no-top-border">
+                <!--nav class="opss-pagination-link opss-pagination-link--no-top-border">
                     <ul>
                         <li class="opss-pagination-link__wrap opss-pagination-link--text govuk-body">
                             Page 1
@@ -520,7 +520,7 @@
                             </a>
                         </li>
                     </ul>
-                </nav>
+                </nav-->
 
 
             </div>
@@ -554,6 +554,11 @@
     setMenuState('cases');
     localStorage.removeItem('addCaseToProduct');
     //validateTheForm($("#main-content").find('form'));
+
+    $('#main-content').find('.govuk-button').click(function(e){
+        e.preventDefault();
+        window.location.assign('blank-02.html');
+    });
 
     //$('#table-items').find('td .govuk-link').click(function(){
         //localStorage.setItem('addCaseToProduct', 'yes');
