--- a/app/views/product-case-testing/start.html
+++ b/app/views/product-case-testing/start.html
@@ -90,7 +90,7 @@
       sessionStorage.clear();
       window.localStorage.clear();
 
-      window.location.assign('cases-page.html');
+      window.location.assign('home.html');
     });
 
 
