--- a/app/views/create-cases-add-products/cases-page.html
+++ b/app/views/create-cases-add-products/cases-page.html
@@ -120,7 +120,7 @@
                     <tbody class="govuk-table__body">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-01" colspan="3" scope="colgroup" class="govuk-table__header">
                                 <a href="#" class="govuk-link govuk-link--no-visited-state">Hair bleach TM, Hair bleach – chemical hazard</a>
@@ -157,7 +157,7 @@
                                 Actions
                             </th>
                             <td headers="item-01 actions-01" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 2021-1001</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 2021-1001</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -165,7 +165,7 @@
                     <tbody class="govuk-table__body">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-02" colspan="3" scope="colgroup" class="govuk-table__header">
                                 <a href="#" class="govuk-link govuk-link--no-visited-state">And another product title here</a>
@@ -200,7 +200,7 @@
                                 Actions
                             </th>
                             <td headers="item-02 actions-02" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 20-2120</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 20-2120</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -208,7 +208,7 @@
                     <tbody class="govuk-table__body">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-03" colspan="3" scope="colgroup" class="govuk-table__header">
                                 <a href="#" class="govuk-link govuk-link--no-visited-state">Electrical appliances and equipment – electric shock hazard (no product specified)</a>
@@ -241,7 +241,7 @@
                                 Actions
                             </th>
                             <td headers="item-03 actions-03" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 2104-21000</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 2104-21000</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -249,7 +249,7 @@
                     <tbody class="govuk-table__body">
                          <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-04" colspan="3" scope="colgroup" class="govuk-table__header">
                                 <a href="#" class="govuk-link govuk-link--no-visited-state">Hair bleach TM, Washing machine – burns hazard</a>
@@ -282,7 +282,7 @@
                                 Actions
                             </th>
                             <td headers="item-04 actions-04" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 2007-37001</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 2007-37001</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -290,7 +290,7 @@
                     <tbody class="govuk-table__body">
                          <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-05" colspan="3" scope="colgroup" class="govuk-table__header">
                                 <a href="#" class="govuk-link govuk-link--no-visited-state">Large Phone Charger Battery, Portable battery – electric shock hazard</a>
@@ -323,7 +323,7 @@
                                 Actions
                             </th>
                             <td headers="item-05 actions-05" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 1007-27002</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 1007-27002</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -331,7 +331,7 @@
                     <tbody class="govuk-table__body">
                          <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-06" colspan="3" scope="colgroup" class="govuk-table__header">
                                 <a href="#" class="govuk-link govuk-link--no-visited-state">Washer 3000, Washing machine – electric shock hazard</a>
@@ -366,7 +366,7 @@
                                 Actions
                             </th>
                             <td headers="item-06 actions-06" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 45001-70000</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 45001-70000</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -374,7 +374,7 @@
                     <tbody class="govuk-table__body">
                          <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-07" colspan="3" scope="colgroup" class="govuk-table__header">
                                 <a href="#" class="govuk-link govuk-link--no-visited-state">Asda bleach, Bleach – chemical hazard</a>
@@ -407,7 +407,7 @@
                                 Actions
                             </th>
                             <td headers="item-07 actions-07" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 25022-21010</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 25022-21010</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -415,7 +415,7 @@
                     <tbody class="govuk-table__body">
                          <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-08" colspan="3" scope="colgroup" class="govuk-table__header">
                                 <a href="#" class="govuk-link govuk-link--no-visited-state">BOSA face masks - fabric fail</a>
@@ -448,7 +448,7 @@
                                 Actions
                             </th>
                             <td headers="item-08 actions-08" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 2221-70003</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 2221-70003</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -456,7 +456,7 @@
                     <tbody class="govuk-table__body">
                          <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
-                                Product
+                                Case title
                             </th>
                             <th id="item-09" colspan="3" scope="colgroup" class="govuk-table__header">
                                 <a href="#" class="govuk-link govuk-link--no-visited-state">Trepid surgical gloves (pair) - wrong gauge</a>
@@ -493,14 +493,14 @@
                                 Actions
                             </th>
                             <td headers="item-09 actions-09" colspan="3" class="govuk-table__cell">
-                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case allegation 21-23341</span></a>
+                                <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 21-23341</span></a>
                             </td>
                         </tr>
                     </tbody>
 
                     <tfoot class="govuk-table__head">
                         <tr class="govuk-table__row">
-                            <th class="govuk-visually-hidden">&nbsp;</th>
+                                                        <th class="govuk-visually-hidden">&nbsp;</th>
                             <th scope="col" class="govuk-table__header">Case number</th>
                             <th scope="col" class="govuk-table__header">Case owner</th>
                             <th scope="col" class="govuk-table__header">Updated</th>
