--- a/app/views/layout-user-testing.html
+++ b/app/views/layout-user-testing.html
@@ -32,18 +32,72 @@
 
 {% block head %}
   {% include "includes/head.html" %}
+  <!-- "Product type" is also "Subcategory - should be 'Descriptive title' e.g Upright Vaccum cleaner" -->
   <script>
     var data = [
-    {"id":"503","prod_name":"Sony 3000 hair dryer (x3000rpm)","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"Hair dryer","prod_category":"electrical goods","prod_modelno":"0001-2993","prod_barcode":"2993-2765298","prod_img":"image_1.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"466","prod_name":"Dyson Animal 2","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"Vaccum cleaner","prod_category":"63","prod_modelno":"27998-2x","prod_barcode":"2993-2765298", "prod_img":"image_2.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"108","prod_name":"Darren Harridence","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"86000","prod_category":"66","prod_modelno":"MB88279","prod_barcode":"2993-2765298","prod_img":"image_3.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"660","prod_name":"Dan Harridence","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"433060","prod_category":"22","prod_modelno":"8990-1-02","prod_barcode":"2021-08121969","prod_img":"image_4.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"278","prod_name":"Darren Harris","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"162700","prod_category":"33","prod_modelno":"TXM-220-3-4000","prod_barcode":"2993-2765298","prod_img":"image_5.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"396","prod_name":"Brielle Williamson","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"372000","prod_category":"61","prod_modelno":"9086-34-126","prod_barcode":"2993-2765298","prod_img":"image_6.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"119","prod_name":"Herrod Chandler","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"137500","prod_category":"59","prod_modelno":"7685-3325-1241","prod_barcode":"EIT-6666-08121869","prod_img":"img-hair-dryer.jpg","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"448","prod_name":"Rhona Davidson","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"327900","prod_category":"55","prod_modelno":"0020-5231-7778xc","prod_barcode":"2993-2765298","prod_img":"image_8.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"666","prod_name":"Rohan Bags","brand":"Rohan","name":"Bags","model":"Standard cotton","prod_subcategory":"Trousers","prod_category":"Clothing, textiles and fashion items","prod_modelno":"bags-501-00","prod_barcode":"23355-657-200","prod_img":"image_9.png","description":"The product description - cotton trousers - lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"459","prod_name":"Sonya Frost","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"103600","prod_category":"23","prod_modelno":"27664889-6223","prod_barcode":"6666-08121869","prod_img":"image_10.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."}
+    {"id":"503","full_prod_name":"Science 4 you: Space expedition torch","brand":"","name":"Space expedition torch","model":"","prod_subcategory":"Science activity toy","prod_category":"Toys","prod_modelno":"918922","prod_barcode":"560983620360","prod_img":"image_1.png","description":"Torch shaped keyring in blue plastic. White plastic on/off switch."},
+
+    {"id":"466","full_prod_name":"Snap Bangers","brand":"Tigerlily Limited","name":"Snap Bangers","model":"","prod_subcategory":"Fireworks","prod_category":"Pyrotechnic articles","prod_modelno":"FKS01 (T8900)","prod_barcode":"0 634041776763", "prod_img":"image_2.png","description":"Small cylindrical tubes of red paper with clay plugs at each end of the tube. Packed in sawdust."},
+
+    {"id":"108","full_prod_name":"Eves Hand Made Things - Allsorts Fridge Magnets","brand":"Eves Hand Made Things","name":"Allsorts Fridge Magnets","model":"Liquorice sweets","prod_subcategory":"Fridge magnets","prod_category":"Food-imitating products","prod_modelno":"","prod_barcode":"2993-2765298","prod_img":"image_3.png","description":"Sold in sets of 5. 25 x sweet shaped magnets (20mm approx.). Shape of liquorice allsorts packaged in small pouch bag."},
+
+    {"id":"660","full_prod_name":"Buttonbabblegifts Novelty Food Fridge Magnets","brand":"Buttonbabblegifts","name":"Fridge Magnets","model":"","prod_subcategory":"Fridge magnets","prod_category":"Food-imitating products","prod_modelno":"","prod_barcode":"","prod_img":"image_4.png","description":"Mixed fridge food imitating magnets: Cherry, Cake, Cinnamon Roll, Ice Cream, Lollies, Biscuits, Chocolate. Packaged in small plastic seal bags."},
+
+    {"id":"278","full_prod_name":"Magnet Toy","brand":"","name":"","model":"","prod_subcategory":"Magnetic office desk toy","prod_category":"Toys","prod_modelno":"","prod_barcode":"","prod_img":"image_5.png","description":"168 pcs magnet toy set with 11mm cylindrical magnets and metallic spheres."},
+
+    {"id":"396","full_prod_name":"3D Magnetic Puzzle Mag Cube Bucky Balls","brand":"","name":"Mag Cube Buckyballs","model":"Buckyballs cube","prod_subcategory":"Magnetic Balls Puzzle cube","prod_category":"Toys","prod_modelno":"","prod_barcode":"","prod_img":"image_6.png","description":"3D 3mm colorful magnetic balls in a silver tin."},
+
+    {"id":"119","full_prod_name":"Surf System Wetsuit Shampoo","brand":"Surf System","name":"Wetsuit Shampoo","model":"","prod_subcategory":"Wetsuit shampoo","prod_category":"Chemical products","prod_modelno":"NG971","prod_barcode":"3701054701345","prod_img":"image_7.png.jpg","description":"500ml bottle containing yellow liquid - black label."},
+
+    {"id":"448","full_prod_name":"Fisher Price 2-in-1 Soothe 'n Play Glider","brand":"Fisher Price","name":"Play Glider","model":"2-in-1 Soothe'n","prod_subcategory":"Infant swing","prod_category":"Childcare articles and children's equipment","prod_modelno":"887961 71129 5","prod_barcode":"","prod_img":"image_8.png","description":"FYY21. Infant swing in a black and white leaf print design and black and white base."},
+
+    {"id":"666","full_prod_name":"Rohan Bags","brand":"Rohan","name":"Bags","model":"Classic","prod_subcategory":"Trousers","prod_category":"Clothing, textiles and fashion items","prod_modelno":"bags-501-00","prod_barcode":"23355-657-200","prod_img":"image_9.png","description":"Cotton travel/hiking trousers with zipped pockets."},
+
+    {"id":"277","full_prod_name":"EMANBA Electric Scooter","brand":"EMANBA","name":"Electric Scooter","model":"Animal 2","prod_subcategory":"Electric scooter","prod_category":"Machinery","prod_modelno":"V-L10","prod_barcode":"","prod_img":"image_10.png","description":"Black and red scooter with seat. 10-inch air tyres."},
+
+    {"id":"367","full_prod_name":"Lamp Chandelier","brand":"","name":"","model":"","prod_subcategory":"Chandelier","prod_category":"Lighting equipment","prod_modelno":"","prod_barcode":"","prod_img":"image_11.png","description":"Black ceiling mounted chandelier with 6 hanging lamps."},
+
+    {"id":"201","full_prod_name":"Soft Glue Animal Building Blocks","brand":"","name":"","model":"No. 1023","prod_subcategory":"Building blocks","prod_category":"Toys","prod_modelno":"1022","prod_barcode":"X0019W5E0R","prod_img":"image_12.png","description":"Colourful animal rubber building blocks with a drawstring bag for storage."},
+
+    {"id":"197","full_prod_name":"Podium Sports Drinking Bottle","brand":"Podium","name":"","model":"","prod_subcategory":"Refillable drinking bottle","prod_category":"Hobby / sports equipment","prod_modelno":"","prod_barcode":"886798014739","prod_img":"image_13.png","description":"Bottle caps with H19063 and H19175 date codes. These could be on Podium, Podium Chill Insulated, Podium Chill Insulated Custom, Podium Dirt Series, Podium Dirt Series Chill Insulated, and Podium Ice Insulated bottles, in a range of colours and sizes."},
+
+    {"id":"399","full_prod_name":"Zara Home Ceramic Switch","brand":"Zara Home","name":"","model":"","prod_subcategory":"Ceramic switch","prod_category":"Electrical appliances and equipment","prod_modelno":"9330/047/251 (white) 9330/047/800 (black)","prod_barcode":"","prod_img":"image_14.png","description":"Ceramic switch in colours black or white."},
+
+    {"id":"469","full_prod_name":"ETSC-Extension Lead with USB Slots, 6 Way Outlets Power Strip with 4 USB Ports, Surge Protection Plug Extension Socket","brand":"","name":"","model":"","prod_subcategory":"Extension lead","prod_category":"Electrical appliances and equipment","prod_modelno":"ETS-001","prod_barcode":"","prod_img":"image_15.png","description":"A black plug with yellow metal pins. Amazon ID (ASIN) B08G8DQC2K"},
+
+    {"id":"349","full_prod_name":"Rangebow Water Drawing Products","brand":"Rangebow Water","name":"","model":"","prod_subcategory":"Painting mat","prod_category":"Toys","prod_modelno":"","prod_barcode":"","prod_img":"image_16.png","description":"A colourful water painting mat with water pens. Amazon ID (ASIN) B074NX9MLV."},
+
+    {"id":"338","full_prod_name":"Travel Adaptor","brand":"","name":"","model":"","prod_subcategory":"UK plug adaptor","prod_category":"Electrical appliances and equipment","prod_modelno":"HK:088","prod_barcode":"MC00110023","prod_img":"image_17.png","description":"White non-UK plug to UK socket adaptor with yellow metal pins."},
+
+    {"id":"166","full_prod_name":"SDC-30W Triple USB Output AC/DC Adaptor","brand":"","name":"","model":"","prod_subcategory":"USB adaptor","prod_category":"Electrical appliances and equipment","prod_modelno":"SDC-30W","prod_barcode":"","prod_img":"image_18.png","description":"White USB adaptor with 3 USB ports."},
+
+    {"id":"218","full_prod_name":"Universal Socket US USA America EU European AUS to UK 3 Pin Plug","brand":"","name":"","model":"No.7","prod_subcategory":"Travel adaptor","prod_category":"Electrical appliances and equipment","prod_modelno":"No.7","prod_barcode":"X000VF3XH9","prod_img":"image_19.png","description":"2 pack of white adaptors supplied in clear plastic bag - no labelling other than Amazon label. ASIN: B01N11ICMH."},
+
+    {"id":"307","full_prod_name":"Chandelier","brand":"","name":"","model":"","prod_subcategory":"Chandelier","prod_category":"Lighting equipment","prod_modelno":"","prod_barcode":"8889185325","prod_img":"image_20.png","description":"FBA15DPWVDGSU000010. SKU: ABF2103 W C10. 10 lamp suspended ceiling mounted luminaire (chandelier) supplied in a cardboard box with the following references on the box labels: XC-RG-10 and X001CMNXY3"},
+
+    {"id":"401","full_prod_name":"2Pcs 4 Inch Grinder Chain Disc 22mm Arbor 22 Tooth Wood Carving Disc For 100/115mm Angle Grinder","brand":"","name":"","model":"","prod_subcategory":"Angle Grinder Chainsaw Disc","prod_category":"Machinery","prod_modelno":"","prod_barcode":"0869692691954","prod_img":"image_21.png","description":"4 Inch Grinder Chain Disc 22mm Arbor 22 Tooth Wood Carving Disc For Angle Grinder"},
+
+    {"id":"401","full_prod_name":"Universal Trimmer Head Brush Cutter chain Grass Lawn Mower Gas Petrol new UK, Chain Brush Cutter","brand":"","name":"","model":"","prod_subcategory":"Chain Brush Cutter","prod_category":"Machinery","prod_modelno":"","prod_barcode":"0714131819461","prod_img":"image_22.png","description":"Universal Trimmer Head Brush Cutter Chain Grass Lawn Mower Gas Petrol. eBay item number: 324536785383."},
+
+    {"id":"521","full_prod_name":"Universal Trimmer Head Brush Cutter Chain Grass Lawn Mower Garden Grass Cutter, Chain Brush Cutter","brand":"","name":"","model":"","prod_subcategory":"Chain Brush Cutter","prod_category":"Machinery","prod_modelno":"","prod_barcode":"0714131819461","prod_img":"image_23.png","description":"Universal trimmer head brush cutter chain grass lawn mower garden grass cutter. eBay item number: 254870714493."},
+
+    {"id":"522","full_prod_name":"BC B22 Bayonet Cap to ES E27 Screw Cap Lampholder Adaptor","brand":"Inlico","name":"","model":"","prod_subcategory":"Lamp Holder Adaptor","prod_category":"Electrical appliances and equipment","prod_modelno":"","prod_barcode":"","prod_img":"image_24.png","description":"B22 Bayonet Cap to E27 Screw Cap Lamp Holder Adaptor."},
+
+    {"id":"504","full_prod_name":"UK Universal Trimmer Head Grass Brush Cutter Lawn Mower Strimmer Tool","brand":"","name":"","model":"","prod_subcategory":"Chain Brush Cutter","prod_category":"Machinery","prod_modelno":"","prod_barcode":"","prod_img":"image_25.png","description":"Universal left-hand trimmer saw chain in black. Made of iron with mounting hold diameter of 25.4mm and adaptor size 10x1.25mm. eBay item number: 184645291103."},
+
+    {"id":"505","full_prod_name":"Trimmer Head Coil Chain Brush Cutter","brand":"","name":"","model":"","prod_subcategory":"Chain Brush Cutter","prod_category":"Machinery","prod_modelno":"","prod_barcode":"","prod_img":"image_26.png","description":"Grass trimmer head with a chainsaw chain and orange top. eBay item number: 184645291103."},
+
+    {"id":"506","full_prod_name":"New Grass Trimmer Head Coil 65Mn Chain Trimmer Head for Brush Cutter","brand":"","name":"","model":"65Mn","prod_subcategory":"Chain Brush Cutter","prod_category":"Machinery","prod_modelno":"","prod_barcode":"","prod_img":"image_27.png","description":"Grass trimmer head with a 65-manganese chainsaw chain and orange top."},
+
+    {"id":"516","full_prod_name":"Kondor KitSound KSFUNK 25 Wireless earbuds","brand":"KitSound by Kondor Ltd","name":"KitSound wireless earbuds","model":"KSFunk 25","prod_subcategory":"Wireless earphones","prod_category":"Gadgets","prod_modelno":"","prod_barcode":"","prod_img":"image_28.png","description":"Wireless earphones available in black, pink, green and grey, packaged in black and grey cardboard packaging, sold between July 2020 and June 2021. Product identified by a label ‘KitSound/KSFUN25’ located on the charging case within the ear bud recess. All batches and colours are affected by the recall."},
+
+    {"id":"516","full_prod_name":"Hoot Flashing Disco Baton","brand":"Hoot","name":"","model":"","prod_subcategory":"Flashing disco baton","prod_category":"Toys","prod_modelno":"TOY-3061","prod_barcode":"5056170330619","prod_img":"image_29.png","description":"Packaged in plastic bag with card attached. Blue or pink handle with three light settings."}
+
+
+
+
+
+
     ];//var data = $.getJSON( '/public/javascripts/products.js');
   </script>
   <script src="/public/javascripts/jquery-1.11.3.js"></script>
