--- a/app/views/product-case-testing/blank-02.html
+++ b/app/views/product-case-testing/blank-02.html
@@ -5,7 +5,7 @@
     <body>
 
         <h1>Sorry</h1>
-        <p>This page is not required as part of the task.</p>
+        <p>Searching the case records is not required as part of this task.</p>
         <p class="button">&#x3c; <a href="javascript:history.go(-1)">Go back</a></p>
 
 
