--- a/app/views/product-case-testing/might-already-exist.html
+++ b/app/views/product-case-testing/might-already-exist.html
@@ -210,7 +210,7 @@
         $.each(data, function(key, val) {
             fromTheProducts = val.id;
             if(theID == fromTheProducts){
-                $('#productName').text(val.prod_name);
+                $('#productName').text(val.full_prod_name);
                 $('#brandName').text(val.brand);
                 $('#nameName').text(val.name);
                 $('#modelName').text(val.model);
