--- a/app/views/product-case-testing/blank-no-more-images.html
+++ b/app/views/product-case-testing/blank-no-more-images.html
@@ -6,7 +6,7 @@
 
         <h1>Sorry</h1>
         <p>On this test demonstration, we have a maximum of two images. Thank you.</p>
-        <p class="button">&#x3c; <a href="upload-a-product-image.html">Go back</a></p>
+        <p class="button">&#x3c; <a href="javascript:history.go(-1)">Go back</a></p>
 
 
     </body>
