--- a/app/views/product-case-testing/inc_blank-pgs-css.html
+++ b/app/views/product-case-testing/inc_blank-pgs-css.html
@@ -1,7 +1,7 @@
 <style>
     body {
         padding: 100px 500px 100px 200px;
-        background-color: #FFDF80;
+        /*background-color: #FFDF80;*/
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 20px;
     }
