--- a/app/views/product-case-testing/products-page.html
+++ b/app/views/product-case-testing/products-page.html
@@ -470,7 +470,7 @@
 function buildHTML(val, o, c){
     o += '<tr class="govuk-table__row">';
     o += '<th class="govuk-visually-hidden">Product</th>';
-    o += '<th id="item-'+val.id+'" colspan="4" scope="colgroup" class="govuk-table__header"><a href="#" class="govuk-link govuk-link--no-visited-state">'+ val.full_prod_name +'</a></th>';
+    o += '<th id="item-'+val.id+'" colspan="4" scope="colgroup" class="govuk-table__header"><a href="/product-case-testing/blank-01.html" class="govuk-link govuk-link--no-visited-state">'+ val.full_prod_name +'</a></th>';
     o += '</tr><tr class="govuk-table__row">';
     o += '<th headers="item-'+val.id+'" id="meta-'+val.id+'" class="govuk-visually-hidden">Metadata</th>';
     o += '<td headers="psd item-'+val.id+' meta-'+val.id+'" class="govuk-table__cell">psd-'+val.id+'</td>';
