--- a/app/views/product-case-testing/success-case-created.html
+++ b/app/views/product-case-testing/success-case-created.html
@@ -109,6 +109,8 @@
         $('body').addClass('showV2');
     }else if(addCaseToProduct == 'no'){
         $('body').addClass('showV1');
+    }else{
+        $('body').addClass('showV2');
     }
 
     //window.addEventListener('beforeunload', function (e) {
