--- a/app/views/product-case-testing/upload-a-product-image-success.html
+++ b/app/views/product-case-testing/upload-a-product-image-success.html
@@ -53,7 +53,7 @@
     <section class="govuk-grid-column-two-thirds opss-equal-height__col" role="region" aria-label="Form">
         <form action="#" method="post" novalidate>
 
-
+          <input type="hidden" id="max" name="max" value="">
 
 
 
@@ -200,6 +200,10 @@
     validateTheForm($("#main-content").find('form'));
 
     getAndDisplayImages();
+
+    if(($('#img0').length) && ($('#img1').length)){
+      $('#max').val('yes');//to redirect to no more images pg
+    }
 
   });
 </script>
