--- a/app/views/product-case-testing/do-you-have-the-barcode.html
+++ b/app/views/product-case-testing/do-you-have-the-barcode.html
@@ -98,7 +98,7 @@
     <span class="govuk-visually-hidden">Error:</span> Enter the product barcode number
   </span>
 
-<input class="govuk-input govuk-!-width-one-third" id="barnumber" name="barnumber" type="text" spellcheck="false" aria-describedby="barnumber-hint">
+<input class="govuk-input govuk-!-width-one-third" id="barnumber" name="barnumber" type="text" spellcheck="false" aria-describedby="barnumber-hint" autocomplete="off">
 </div>
 
 
