--- a/app/views/product-case-testing/start.html
+++ b/app/views/product-case-testing/start.html
@@ -45,9 +45,9 @@
 
       <!--p class="govuk-body-l">Use the navigation menu at the top of this page to start.</p-->
 
-      <p class="govuk-body-l">The next page will open in a new tab:</p>
+      <!--p class="govuk-body-l">The next page will open in a new tab:</p-->
 
-      <a href="cases-page.html" id="test-clear" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button" target="_blank">
+      <a href="cases-page.html" id="test-clear" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
         Start now
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
           <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
