--- a/app/views/product-case-testing/what-is-the-product-name.html
+++ b/app/views/product-case-testing/what-is-the-product-name.html
@@ -269,14 +269,21 @@
   <label class="govuk-label" for="modelnumber">
     What is the model number?
   </label>
-
-
-
   <div id="modelnumber-hint" class="govuk-hint govuk-hint govuk-!-font-size-16">
-    Some products have a separate model number. For example, <span class="opss-no-wrap">334176-01</span>. <!--br class="opss-br-desktop">Numbers in a product name usually form part of the product or model name.--> <br class="opss-br-desktop">Be aware that retailers sometimes repeat a model number as part of the product name, or use part of the name as a model number.
+    Some products have a separate model number. For example, <span class="opss-no-wrap">334176-01</span>. <!--br class="opss-br-desktop">Numbers in a product name usually form part of the product or model name.--> <!--br class="opss-br-desktop">Some retailers sometimes repeat a model number as part of the product name, or use part of the name as a model number.-->
   </div>
+  <input class="govuk-input  govuk-input--width-10" id="modelnumber" name="modelnumber" type="text" aria-describedby="modelnumber-hint">
+</div>
 
-<input class="govuk-input  govuk-input--width-10" id="modelnumber" name="modelnumber" type="text" aria-describedby="modelnumber-hint">
+<div class="govuk-form-group govuk-!-margin-bottom-5">
+  <label class="govuk-label" for="identifyingnumber">
+    Are there any general identifying numbers?
+  </label>
+  <div id="identifyingnumber-hint" class="govuk-hint govuk-hint govuk-!-font-size-16">
+    General product identifiers might include an <abbr title="Stock Keeping Unit">SKU</abbr>, eBay or <abbr title="Amazon Standard Identification Number">ASIN</abbr> (Amazon) number.
+    <br class="opss-br-desktop">To add multipul number codes seperate each one from the next with a comma.
+  </div>
+  <input class="govuk-input  govuk-input--width-10" id="identifyingnumber" name="identifyingnumber" type="text" aria-describedby="identifyingnumber-hint">
 </div>
 
 
