link added to index page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -67,7 +67,7 @@
           </span>
         </summary>
         <div class="govuk-details__text">
-          Coming soon ... !
+          <a class="govuk-link govuk-link--no-visited-state" href="/product-case-testing/start" target="_blank">User-test prototype</a>
         </div>
       </details>
 
