cosmetics tasks wireframe txt updated

--- a/app/views/drafts-gui/remove-nano-step.html
+++ b/app/views/drafts-gui/remove-nano-step.html
@@ -5,8 +5,11 @@
     <body>
         <p>The <u>Remove</u> link only appears if the Nanomaterials section appears (and there are nanomaterials in the draft).</p>
         <p>The user is served a page/form showing all the nanomaterials (which are part of this draft) with checkboxes: </p>
-        <p>A Help/Hint text confirms that if all nanomaterials are removed then the user is required to complete task 1 again to add nanomaterials.</p>
-        <p>The page title is: &quot;Choose which nanomaterials you want to remove&quot;.</p>
+        <p>A Help/Hint text confirms that if <u>all</u> nanomaterials are removed then the user is required to complete task 1 again to add nanomaterials. (If all nanomaterials are deleted the nanomaterial quantity of task 1 is set to 0).</p>
+
+        <p>If the user has already completed the 'Category and formulation' task, an <b>(!)</b>Important help text statement confirms that if <i>any</i> nanomaterial is removed then the user is required to complete the 'Category and formulation' task again. (If a nanomaterial is removed, the 'Category and formulation' information is deleted and the 'Category and formulation' task is returned to its appropriate status - as does the final 'Accept and submit').</p>
+
+        <p>The page title is: &quot;Select which nanomaterial(s) to remove&quot;.</p>
         <p>A Cancel link allows the user to return to the draft page, but a green Continue button takes the user to a new page.</p>
 
 <hr>
@@ -15,7 +18,7 @@
 
 <hr>
 
-        <p><i>Bruce: removing a nanomaterial on a single product - would this mean that the Categories/Formulation task would need redoing?</i></p>
+
 
 
 
